# gol_rust

./: .gitignore  Cargo.toml  README.md
public/: index.html  index.js
src/: game_api.rs  game_constants.rs  game_engine.rs  game_entropy.rs  game_species.rs  game_universe.rs  main.rs
