[package]
name = "gol_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-builder = "0.2.0"
rand = "0.8"
stopwatch = "0.0.7"
serde = { version = "1.0", features = ["derive"] }
image = "0.24.5"
imageproc = "0.23.0"
futures = "0.3"
actix-rt = "2.7.0"
actix-web = "4"
glob = "0.3.1"
regex = "1.7.1"
actix-files = "0.6.2"
